test_regress/t/t_sequence_first_match_unsup.out
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:54:33: Unsupported: first_match (in sequence expression)
   54 |   initial p1 : assert property (first_match ((##1 1) or(##2 1)) |-> x == 1);
      |                                 ^~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:60:33: Unsupported: first_match (in sequence expression)
   60 |   initial p3 : assert property (first_match (1 or ##1 1) |-> x == 0);
      |                                 ^~~~~~~~~~~
%Error: Exiting due to
